--- a/styles/style.scss
+++ b/styles/style.scss
@@ -2,6 +2,9 @@
   padding:0;
   margin:0;
   box-sizing:border-box;
+  font-family: 'Noto Sans TC', sans-serif;
+  font-family: 'Noto Serif TC', serif;
+
 }
 
 header{
@@ -52,9 +55,46 @@ main{
         height:20vw;
         object-fit: cover;
         position:absolute;
-        top:55vh;
+        top:45vh;
         right:25vw;
         transform:translateY(-50%);
+        }
+    }
+    section.table{
+        flex:3 1 500px; 
+        padding:2rem;
+        table{
+            border-collapse: collapse;
+            tr{
+                border-bottom:2px solid gray;
+                transition: all 0.2s ease;
+                &:hover {
+                    background-color: rgb(205, 255, 252);
+                }
+                td{
+                    padding:1rem;
+                }
+            }
+        }
+    }
+    section.picture{
+        flex:1 1 600px;
+        img{
+            padding-top:30%;
+            width:40vw;
+            position:relative;
+            align-items: center;
+        }
+        div.grayrect{
+            padding-top:30%;
+            width:40vw;
+            height:50vh;
+            background-color: gray;
+            position:absolute;
+            top:310px;
+            left:850px;
+            z-index:-1
+    
         }
     }
 
@@ -78,6 +118,7 @@ main{
         }
     }
 main{
+
     section.right{
         display:flex;
         justify-content:center;
@@ -89,8 +130,12 @@ main{
             height:50vw;
         }
     }
+
+   
 }
 }
+
+
 
 
 
